--- a/ClientApp/src/custom.css
+++ b/ClientApp/src/custom.css
@@ -11,7 +11,7 @@ a {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 body {
-  background-color: #13181c;
+  background-color: #788a9d;
 }
 code {
   color: #e01a76;
