--- a/ClientApp/src/custom.css
+++ b/ClientApp/src/custom.css
@@ -10,9 +10,14 @@ a {
 .form-check-input:focus {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
-body {
-  background-color: rgb(186, 35, 133);
-}
+
+  /* background-color: rgb(186, 35, 133); */
+  body {
+    background-image: linear-gradient(to right, rgb(186, 35, 133), rgb(115, 85, 133), rgb(35, 133, 186));
+    font-family: monaco;
+  }
+  
+
 code {
   color: #e01a76;
 }
